<resources>
    <string name="app_name">ExerciseSqlite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Tambah Data</string>
    <string name="edit">Edit Mahasiswa</string>
    <string name="delete">Delete Mahasiswa</string>
    <string name="title_activity_display_contact">Data
Mahasiswa</string>
    <string name="name">Nama</string>
    <string name="phone">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_telepon">Masukkan Telepon</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="save">Simpan</string>
    <string name="deleteContact">Yakin...ingin menghapus ini.</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="db">Data</string>
    <string name="ti">Daftar Kontak</string>
</resources>
